--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ https://templatemo.com/tm-578-first-portfolio
                                             </div>
                                         </div>
 
-                                        <p>Here is stored all the Javascript assignments</p>
+                                        <p>Here is stored all the PHP assignments</p>
 
                                         <a target="__blank" href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
 
